Removed unnecessary files.

--- a/Lab_02/Makefile
+++ b/Lab_02/Makefile
@@ -25,4 +25,8 @@ clean:
 	rm -f *.mod.o
 	rm -f \.*.cmd
 	rm -f Module.markers
+	rm -f *~
+	rm -f *@*
 	rm -f $(APP)
+	rm -f $(APP2)
+	rm -f $(APP3)
