Finished with project. Need to create a README.txt for each part.

--- a/Lab_03/Part3/Makefile
+++ b/Lab_03/Part3/Makefile
@@ -1,12 +1,12 @@
 obj-m:= i2c_flash.o
 
-KDIR:= ~/kernel ~/kernel/drivers
+KDIR:= ~/kernel
 PWD:= $(shell pwd)
 
 APP = main
 
 default:
-	arm-angstrom-linux-gnueabi-gcc -g main_03_test.c -o $(APP) -lpthread
+	arm-angstrom-linux-gnueabi-gcc -g main_03.c -o $(APP) -lpthread
 	$(MAKE) -C $(KDIR) SUBDIRS=$(PWD) modules
 
 clean:
